Add links to pages from screenshots.

--- a/ctzn-app.html
+++ b/ctzn-app.html
@@ -24,37 +24,37 @@ title: CTZN App
 
     <p>During the project I worked closely with our designer, Aldo, to express feature ideas as web prototypes. From these we created a <a href="https://ctznapp.com/web">web app</a>, a <a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">stories page</a>, and a <a href="http://getctzn.com">promotional web site</a>. We continually reworked these as new features and ideas came about. In the process, I made a <a href="http://goodinc.github.io/ctzn-ui/build/">pattern library</a> so the team could easily find the latest designs and HTML to copy for new features.</p>
 
-    <h2>Read the stories</h2>
+    <h2>Visit the project</h2>
+
+    <ul class="action">
+      <li><a href="http://getctzn.com">Promotional Website</a></li>
+      <li><a href="https://ctznapp.com/web">Web Application</a></li>
+      <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
+    </ul>
+
+    <h2>Stories</h2>
     <ul class="action">
       <li><a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies">Milk &amp; Bookies</a></li>
       <li><a href="https://www.ctznapp.com/push/C50609F6/kaboom">KaBOOM!</a></li>
     </ul>
 
-    <h2>Watch the channels</h2>
+    <h2>Channels</h2>
     <ul class="action">
       <li><a href="https://www.ctznapp.com/push/93311448/dare-to-imagine?channel=1">Dare to Imagine</a></li>
       <li><a href="https://www.ctznapp.com/push/86B01D86/perthes-kids-foundation?channel=1">Perthes Kids Foundation</a></li>
     </ul>
 
-    <h2>Visit the project</h2>
-
-    <ul class="action">
-      <li><a href="http://getctzn.com">Get CTZN</a></li>
-      <li><a href="https://ctznapp.com/web">CTZN App</a></li>
-      <li><a href="https://goodinc.github.io/ctzn-ui/build/">Pattern library</a></li>
-    </ul>
-
     <figure>
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.49.59 PM.png" width="500" alt="" />  
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.51.09 PM.png" width="500" alt="" />
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.51.30 PM.png" width="500" alt="" />
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.52.37 PM.png" width="500" alt="" />
-      <!--
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.52.47 PM.png" width="500" alt="" />
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.53.29 PM.png" width="500" alt="" />
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.55.28 PM.png" width="500" alt="" />
-      <img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.56.04 PM.png" width="500" alt="" />
-      -->
+      <a href="http://getctzn.com"><img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.49.59 PM.png" width="500" alt="CTZN promotional website" /></a>
+    </figure>
+    <figure>
+      <a href="http://getctzn.com"><img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.51.09 PM.png" width="500" alt="Storytelling tools for changemakers" /></a>
+    </figure>
+    <figure>
+      <a href="http://getctzn.com"><img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.51.30 PM.png" width="500" alt="Made for and by communities" /></a>
+    </figure>
+    <figure>
+      <a href="https://www.ctznapp.com/push/0094EAB8/milk-bookies"><img src="/images/ctzn-app/Screen Shot 2017-08-26 at 5.52.37 PM.png" width="500" alt="Stories, Milk + Bookies" /></a>
     </figure>
 
     <h2>Crew</h2>
