--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -28,11 +28,19 @@ title: Fahrenheit Studio
     </ul>
 
     <figure>
-      <img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.26.10 PM.png" width="500" alt="" />
-      <img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.27.21 PM.png" width="500" alt="" />
-      <img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.30.04 PM.png" width="500" alt="" />
-      <img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.30.22 PM.png" width="500" alt="" />
-      <img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.30.31 PM.png" width="500" alt="" />
+      <a href="http://www.fahrenheit.com"><img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.26.10 PM.png" width="500" alt="Fahrenheit Studio" /></a>
+    </figure>
+    <figure>
+      <a href="http://www.fahrenheit.com/what/mix/"><img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.27.21 PM.png" width="500" alt="Fahrenheit Studio" /></a>
+    </figure>
+    <figure>
+      <a href="http://www.fahrenheit.com/work/juliet/"><img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.30.04 PM.png" width="500" alt="Case Study" /></a>
+    </figure>
+    <figure>
+      <a href="http://www.fahrenheit.com/work/kttunstall/"><img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.30.22 PM.png" width="500" alt="Case Study" /></a>
+    </figure>
+    <figure>
+      <a href="http://www.fahrenheit.com/work/dwele/"><img src="/images/fahrenheit/Screen Shot 2017-08-26 at 6.30.31 PM.png" width="500" alt="Case Study" /></a>
     </figure>
 
     <h2>Crew</h2>
