--- a/food-oasis.html
+++ b/food-oasis.html
@@ -37,22 +37,16 @@ title: Food Oasis Los Angeles
     </ul>
 
     <figure>
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.18 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.25 AM.png" width="500" alt="" />
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.42 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.47 AM.png" width="500" alt="" />
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.01 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.13 AM.png" width="500" alt="" />
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.59 AM.png" width="500" alt="" />
-      -->
-      <!--
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.07 AM.png" width="500" alt="" />
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.21 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.27 AM.png" width="500" alt="" />
+      <a href="https://foodoasis.la"><img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.18 AM.png" width="500" alt="Food Oasis Los Angeles" /></a>
+    </figure>
+    <figure>
+      <a href="https://foodoasis.la/locations"><img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.17.47 AM.png" width="500" alt="Map of healthy food locations" /></a>
+    </figure>
+    <figure>
+      <a href="https://foodoasis.la/organizations/"><img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.18.01 AM.png" width="500" alt="Organizations featured on Food Oasis" /></a>
+    </figure>
+    <figure>
+      <a href="https://foodoasis.la/#navigation"><img src="/images/food-oasis/Screen Shot 2017-09-07 at 12.19.27 AM.png" width="500" alt="Food Oasis sponsors" /></a>
     </figure>
 
     <h2>Crew</h2>
