--- a/good-community.html
+++ b/good-community.html
@@ -31,20 +31,12 @@ title: GOOD Community
     </ul>
 
     <figure>
-      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.33 PM.png" width="500" alt="" /></a>
-      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.38 PM.png" width="500" alt="" /></a>
-      <!--
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.11 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.03 PM.png" width="500" alt="" />
-      -->
-      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.21 PM.png" width="500" alt="" /></a>
-      <!--
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.28 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.46 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.51 PM.png" width="500" alt="" />
-      <img src="/images/good-community/Screen Shot 2017-08-26 at 6.11.04 PM.png" width="500" alt="" />
-      -->
-      <a href="https://goodinc.github.io/citizen-ui/"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.12.40 PM.png" width="500" alt="" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/html/prototype/"><img src="/images/good-community/Screen Shot 2017-09-07 at 12.55.45 AM.png" width="500" alt="Prototype" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/html/prototype/topic.html"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.33 PM.png" width="500" alt="Topic Prototype" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/html/prototype/member.html"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.38 PM.png" width="500" alt="Member Profile Prototype" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/html/prototype/story.html"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.10.21 PM.png" width="500" alt="" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/html/patterns/"><img src="/images/good-community/Screen Shot 2017-09-07 at 12.55.47 AM.png" width="500" alt="Patterns" /></a>
+      <a href="https://goodinc.github.io/citizen-ui/html/patterns/activity.html"><img src="/images/good-community/Screen Shot 2017-08-26 at 6.12.40 PM.png" width="500" alt="" /></a>
     </figure>
 
     <!--
