--- a/good-fest.html
+++ b/good-fest.html
@@ -32,36 +32,14 @@ title: GOOD Fest
       <li><a href="https://goodfest.good.is/featured-video/goodfest">Video Archive</a></li>
     </ul>
 
-    <!--
-    <div style="margin: 3em calc(-50vw + 16.5em); box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25); background-image: url(/images/screenshots/goodfest-2.png);"></div>
-
-
-    <img src="/images/screenshots/goodfest-2.png" style="max-width: 100%; margin: 3em auto; box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25); " alt="" />
-    <img src="/images/screenshots/video-archive.png" style="max-width: 100%;  margin: 3em auto;  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25)" alt="" />
-    -->
-
     <figure>
-      <!--
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.27 AM.png" width="500" alt="" />
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.34 AM.png" width="500" alt="" />
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.31 AM.png" width="500" alt="" />
-      -->
-      <!--
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.46 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.54 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.59 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.23 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.40.36 AM.png" width="500" alt="" />
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.40.55 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.35.02 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/good-fest/Screen Shot 2017-08-20 at 3.36.24 AM.png" width="500" alt="" />
-      -->
+      <a href="https://goodfest.good.is"><img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.54 AM.png" width="500" alt="GOODFest, A livestream festival for good." /></a>
+    </figure>
+    <figure>
+      <a href="https://goodfest.good.is"><img src="/images/good-fest/Screen Shot 2017-08-20 at 3.33.23 AM.png" width="500" alt="GOODFest, A livestream festival for good." /></a>
+    </figure>
+    <figure>
+      <a href="https://goodfest.good.is/featured-video/goodfest"><img src="/images/good-fest/Screen Shot 2017-08-20 at 3.35.02 AM.png" width="500" alt="GOODfest Video Archive" /></a>
     </figure>
 
     <h2>Crew</h2>
