--- a/grand-park.html
+++ b/grand-park.html
@@ -33,28 +33,10 @@ title: 4th of July at Grand Park
     </ul>
 
     <figure>
-      <!--
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.08 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.26 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.31 AM.png" width="500" alt="" />
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.43 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.48 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.56 AM.png" width="500" alt="" />
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.46.24 AM.png" width="500" alt="" />
-      -->
-      <!--
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.46.16 AM.png" width="500" alt="" />
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.50.54 AM.png" width="500" alt="" />
-      -->
-      <!--
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.53.55 AM.png" width="500" alt="" />
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.54.08 AM.png" width="500" alt="" />
-      <img src="/images/grand-park/Screen Shot 2017-08-20 at 3.54.15 AM.png" width="500" alt="" />
-      -->
+      <a href="https://july4.grandparkla.org"><img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.26 AM.png" width="500" alt="Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA" /></a>
+    </figure>
+    <figure>
+      <a href="https://july4.grandparkla.org/#event-map"><img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.48 AM.png" width="500" alt="Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA" /></a>
     </figure>
 
     <h2>Crew</h2>
