--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -33,9 +33,16 @@ title: OK the Store
     </ul>
 
     <figure>
-      <img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.16.31 PM.png" width="500" alt="" />
-      <img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.17.34 PM.png" width="500" alt="" />
-      <img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.18.29 PM.png" width="500" alt="" />
+      <a href="https://web-beta.archive.org/web/20140802135613/okthestore.com"><img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.16.31 PM.png" width="500" alt="Ok the Store" /></a>
+    </figure>
+    <figure>
+      <a href="https://web-beta.archive.org/web/20140803111027/http://okthestore.com/shop/category/gear"><img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.17.34 PM.png" width="500" alt="Category page" /></a>
+    </figure>
+    <figure>
+    <a href="http://okthestore.jimthoburn.com"><img src="/images/ok-the-store/Screen Shot 2017-09-07 at 1.03.45 AM.png" width="500" alt="Prototypes" /></a>
+    </figure>
+    <figure>
+      <a href="http://okthestore.jimthoburn.com/product.html"><img src="/images/ok-the-store/Screen Shot 2017-08-26 at 6.18.29 PM.png" width="500" alt="Item page prototype" /></a>
     </figure>
 
     <h2>Crew</h2>
