--- a/jj-burns.html
+++ b/jj-burns.html
@@ -28,15 +28,23 @@ title: JJ Burns
     </ul>
 
     <figure>
-      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.21.48 PM.png" width="500" alt="" />
-      <!--
-      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.03 PM.png" width="500" alt="" />
-      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.26 PM.png" width="500" alt="" />
-      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.12 PM.png" width="500" alt="" />
-      -->
-      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.32 PM.png" width="500" alt="" />
-      <img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.23.29 PM.png" width="500" alt="" />
+      <a href="http://jjburns.com"><img src="/images/jj-burns/Screen Shot 2017-09-07 at 1.06.00 AM.png" width="500" alt="JJ Burns &amp; Company" /></a>
     </figure>
+    <figure>
+      <a href="http://jjburns.com/what-we-do/charitable-planning"><img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.21.48 PM.png" width="500" alt="Service page" /></a>
+    </figure>
+    <figure>
+      <a href="http://jjburns.com/get-to-know-us/executive-team/jessica-evans"><img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.22.32 PM.png" width="500" alt="Team member page" /></a>
+    </figure>
+    <figure>
+      <a href="http://jjburns.com/assets/html/patterns/"><img src="/images/jj-burns/Screen Shot 2017-09-07 at 1.07.51 AM.png" width="500" alt="Pattern Library" /></a>
+    </figure>
+    <figure>
+      <a href="http://jjburns.com/assets/html/patterns/related.html"><img src="/images/jj-burns/Screen Shot 2017-08-26 at 6.23.29 PM.png" width="500" alt="Layout Prototype" /></a>
+    </figure>
+
+
+
 
     <h2>Crew</h2>
 
