--- a/kiva.html
+++ b/kiva.html
@@ -32,31 +32,13 @@ title: 10 Days of Lending
     </ul>
 
     <figure>
-      <!--
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.04.06 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.04.19 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.04.14 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.04.54 AM.png" width="500" alt="" />
-      -->
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.05.24 AM.png" width="500" alt="" />
-      <!--
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.09.03 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.09.28 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.12.35 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.13.32 AM.png" width="500" alt="" />
-      -->
-      <!--
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.13.18 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.12.57 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.10.16 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.09.59 AM.png" width="500" alt="" />
-      -->
-      <!--
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.12.44 AM.png" width="500" alt="" />
-      <img src="/images/kiva/Screen Shot 2017-08-20 at 4.05.19 AM.png" width="500" alt="" />
-      -->
+      <a href="https://www.kiva.org/paypal"><img src="/images/kiva/Screen Shot 2017-08-20 at 4.04.19 AM.png" width="500" alt="10 Days of Lending, Kiva and PayPal" /></a>
+    </figure>
+    <figure>
+      <a href="https://www.kiva.org/paypal"><img src="/images/kiva/Screen Shot 2017-08-20 at 4.04.14 AM.png" width="500" alt="10 Days of Lending, Kiva and PayPal" /></a>
+    </figure>
+    <figure>
+      <a href="https://www.kiva.org/paypal"><img src="/images/kiva/Screen Shot 2017-08-20 at 4.05.24 AM.png" width="500" alt="10 Days of Lending, Kiva and PayPal" /></a>
     </figure>
 
     <h2>Crew</h2>
