--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@ class: home
 
     <h1>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">living in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
-    <p>If you’re making a website or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are <span style="display: inline-block">some example projects…</span></p>
+    <!--
+    <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
+    -->
+
+    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are <span style="display: inline-block">some example projects…</span></p>
 
     <!--
     <h1>I speak <span style="">design &amp; code</span></h1>
