--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <h1>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">living in <span style="display: inline-block">Los Angeles.</span></span></h1>
+    <h1>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
     <!--
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
