Add screenshot for Grand Park.

--- a/grand-park.html
+++ b/grand-park.html
@@ -25,6 +25,8 @@ title: 4th of July at Grand Park
 
     <p>We also created a microsite for the event in <a href="https://jekyllrb.com">static HTML</a>, hosted on <a href="https://pages.github.com">GitHub Pages</a>, with a fresh, responsive design to show off their beautiful poster illustrations–and used an <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Using_the_application_cache">application cache</a> to keep the website available if a user’s device is offline.</p>
 
+    <p>My role involved creating a design prototype, facilitating discussions and getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, editing content for usability, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, creating an appcache manifest for offline browsing, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
+
     <h2>Visit the project</h2>
 
     <ul class="action">
@@ -32,6 +34,9 @@ title: 4th of July at Grand Park
       <li><a href="https://github.com/grandparkla/july4">GitHub Project</a></li>
     </ul>
 
+    <figure>
+      <a href="https://july4.grandparkla.org"><img src="/images/grand-park/Screen Shot 2017-09-15 at 10.25.52 AM.png" width="500" alt="Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA" /></a>
+    </figure>
     <figure>
       <a href="https://july4.grandparkla.org"><img src="/images/grand-park/Screen Shot 2017-08-20 at 3.45.26 AM.png" width="500" alt="Grand Park + The Music Center. 4th Of July Block Party, 2017 #Go4thDTLA" /></a>
     </figure>
