Update home page content

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
-    <h1>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
+    <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
+
+    <h1>I partner with designers &amp; engineers to create experiences for the Web that are pleasing to users and built to last.</h1>
 
     <!--
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
     -->
 
-    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more!  Here are <span style="display: inline-block">some example projects…</span></p>
+    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more! Here are some examples projects…</p>
+
+    <!--
+    <h2>Here are some projects &amp; teams I’ve been a part of…</h2>
+    <p>Whether you’re making a new product or updating an established one, <a href="#services">I can assist</a> during your design and engineering process to help produce the best results possible.</p>
+
+    <h2>Here are some projects &amp; teams I’ve been a part of…</h2>
+    -->
 
     <!--
     <h1>I speak <span style="">design &amp; code</span></h1>
