Add a drop cap style

--- a/good-fest.html
+++ b/good-fest.html
@@ -25,7 +25,7 @@ title: GOOD Fest
 
     <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <a href="https://goodfest.good.is/featured-video/goodfest">video archive</a> of the shows.</p>
 
-    <p>My role involved creating design prototypes, facilitating discussions and getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating with server-side templates. (We used Ruby on Rails.)</p>
+    <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
 
     <h2>Visit the project</h2>
 
