--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ class: home
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
     -->
 
-    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more! Here are some examples projects…</p>
+    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more! Here are some example projects…</p>
 
     <!--
     <h2>Here are some projects &amp; teams I’ve been a part of…</h2>
