Tweak intro styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Jim Thoburn, User interface developer for the Web
+title: Jim Thoburn, a UI developer in Los Angeles
 beta_title: Style & Code for the Web, by Jim Thoburn 🌩 🐻
 class: home
 ---
@@ -11,15 +11,22 @@ class: home
       <use xlink:href="/images/ship.svg#ship"></use>
     </svg>
 
+    <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
+    -->
+    <h1 style="font-size: inherit; line-height: inherit; margin: 1.4em 0;">Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
     <h1>I partner with designers &amp; engineers to create experiences for the Web that are pleasing to users and built to last.</h1>
+
+    <p>If you’re making a web site or application, I can assist with prototypes, responsive design, pattern libraries <a href="#services" title="Services">and more</a>. Here are some example projects…</p>
 
     <!--
     <h2>I also like to bake 🍞 🍪 and take pictures 📷 🖼</h2>
     -->
 
-    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes</a>, <a href="#services">responsive design</a>, <a href="#services">pattern libraries</a> and more! Here are some example projects…</p>
+    <!--
+    <p>If you’re making a web site or application, I can assist with <a href="#services">prototypes, responsive design, pattern libraries</a> and more! Here are some example projects…</p>
+    -->
 
     <!--
     <h2>Here are some projects &amp; teams I’ve been a part of…</h2>
@@ -148,7 +155,7 @@ class: home
     <ul>
       <li>
         <h2>Prototypes</h2>
-        <p>Get an <a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">interactive sketch</a> for your project! These can be tested with users–to help choose a direction for a new product.</p>
+        <p>Get an <a href="https://www.usability.gov/how-to-and-tools/methods/prototyping.html">interactive sketch</a> for your project. These can be tested with users–to help choose a direction for a new product.</p>
       </li>
       <!--
       <li>
