--- a/good-community.html
+++ b/good-community.html
@@ -21,7 +21,13 @@ title: GOOD Community
 
     <p>The GOOD Community website, along with <a href="http://good.is">GOOD Magazine</a>, celebrates individuals and organizations who are working for postive change in the world. The beautiful desktop-oriented site needed a responsive redesign.</p>
 
-    <p>During the project, I worked closely with our designer, Aldo, to create <a href="http://goodinc.github.io/citizen-ui/html/prototype/">web prototypes</a> which demonstrated how the new site would look at different screen sizes. We continually improved these while testing with users. In the process, I made a <a href="http://goodinc.github.io/citizen-ui/html/patterns/">pattern library</a> so anyone on the team could see the latest designs and find HTML to copy for new features.</p>
+    <p>During the project, I worked closely with our designer, Aldo, to create <a href="http://goodinc.github.io/citizen-ui/html/prototype/">web prototypes</a> which demonstrated how the new site would look at different screen sizes. We continually improved these while testing with users.</p>
+
+    <p>Using the prototype as a guide, we updated each unique template on the website one-by-one, starting with the most popular pages and working toward the less noticeable ones, until the upgrade was complete.</p>
+
+    <p>In the process, I made a <a href="http://goodinc.github.io/citizen-ui/html/patterns/">pattern library</a> so anyone on the team could see the latest designs and find HTML to copy for new features.</p>
+
+    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
 
     <h2>Visit the project</h2>
     <ul class="action">
