--- a/jj-burns.html
+++ b/jj-burns.html
@@ -19,7 +19,10 @@ title: JJ Burns
 
   <div class="container">
     <p>JJ Burns provides financial services to a broad range of clients, from endowments to professional athletes. Their aging desktop-oriented website needed a redesign.</p>
+
     <p>I worked alongside Dylan, our designer, to create responsive prototypes that expressed a new content structure and visual look for the website. Along the way, I created a <a href="http://jjburns.com/assets/html/patterns/">pattern library</a>, and I found out that <a href="#robert">Robert</a> is an excellent cook.</p>
+
+    <p>My role also involved writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used ExpressionEngine.)</p>
 
     <h2>Visit the project</h2>
     <ul class="action">
