--- a/ok-the-store.html
+++ b/ok-the-store.html
@@ -23,6 +23,8 @@ title: OK the Store
 
     <p>Based on OK the Store’s existing brand, Ben and I designed and built <a href="http://okthestore.jimthoburn.com">web prototypes</a> for the e-commerce store.</p>
 
+    <p>My role involved creating prototypes, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
+
     <h2>Visit the project</h2>
     <ul class="action">
       <!--
