--- a/kiva.html
+++ b/kiva.html
@@ -25,6 +25,8 @@ title: 10 Days of Lending
 
     <p>I also worked closely with Rachel from Kiva to jump through some JavaScript and CSS hoops while getting the production code into Kiva’s content management system.</p>
 
+    <p>My role also involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
+
     <h2>Visit the project</h2>
 
     <ul class="action">
