--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ class: home
     -->
     <h1 style="font-size: inherit; line-height: inherit; margin: 1.4em 0;">Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
-    <h2 style="font-family: 'Goudy Bookletter 1911', Georgia, serif; font-weight: normal; font-size: 2em; line-height: 1; margin-top: 1em; margin-bottom: 1em;">I partner with designers &amp; engineers to create experiences for the Web that are pleasing to users and built to last.</h2>
+    <h2 style="font-size: 2em; line-height: 1; margin-top: 1em; margin-bottom: 1em;">I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
     <p>If you’re making a web site or application, I can assist with prototypes, responsive design, pattern libraries <a href="#services" title="Services">and more</a>. Here are some example projects…</p>
 
