--- a/good.html
+++ b/good.html
@@ -24,7 +24,7 @@ title: GOOD Worldwide
 
     <p>During the project I worked alongside Erica, our designer, to create <a href="https://jimthoburn.github.io/goodinc-ui/design/">responsive prototypes</a> that expressed a content structure and visual look for the new website. During the process, I documented the <a href="https://jimthoburn.github.io/goodinc-ui/build/">code patterns</a> to make it easier to add new pages and features in the future.</p>
 
-    <p>My role also facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
+    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
 
     <h2>Visit the project</h2>
 
