Update FOLA case study

--- a/food-oasis.html
+++ b/food-oasis.html
@@ -29,7 +29,7 @@ title: Food Oasis Los Angeles
 
     <p>I’ve been involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static website</a>, writing and editing <a href="https://github.com/foodoasisla/site/issues">issues</a>, and providing developer support for our weekly volunteers.</p>
 
-    <p>My role has also involved creating prototypes, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
+    <p>My role has also involved creating prototypes, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, importing and managing data with Node.js, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
 
     <h2>Visit the project</h2>
 
