--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ class: home
     <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
     -->
-    <h1 style="font-size: inherit; line-height: inherit; margin: 1.4em 0;">Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
+    <h1 style="font-size: inherit; line-height: inherit; margin: 1.4em 0;">Ahoy there! <span style="display: inline-block">I’m Jim, a <!-- web design engineer -->user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></h1>
 
     <h2 style="font-size: 2em; line-height: 1; margin-top: 1em; margin-bottom: 1em;">I partner with <!-- business owners,--> designers &amp; engineers to create products for the Web that are pleasing to users and built to last.</h2>
 
@@ -179,10 +179,8 @@ class: home
       </li>
       -->
     </ul>
-    <!--
     <h2>I can also assist with…</h2>
-    <p>accessibility, compatibility, performance, testing, integration with templates, and responsive emails.</p>
-    -->
+    <p>accessibility, browser/device compatibility, testing, optimizing front end code for performance, integration with templates, responsive emails, and more!</p>
   </div>
 
   <div class="container">
