--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -21,9 +21,9 @@ title: Fahrenheit Studio
 
     <p>Fahrenheit Studio has been helping companies express their brand since 1995. Their beautiful, desktop-oriented website needed a redesign.</p>
 
-    <p>I worked alongside Dylan, Fahrenheit’s designer, to create responsive prototypes. Together we made a new <a href="http://www.fahrenheit.com/work/">portfolio</a> with larger images, appropriate for retina displays and big screens. I also found out that <a href="#robert">Robert</a> is an excellent guitar player.</p>
+    <p>During the project, I worked alongside Dylan, our designer, to create a <a href="http://www.fahrenheit.com/work/">responsive portfolio</a> that emphasized Fahrenheit’s beautiful project images and screenshots and would look great on retina displays and big screens. I also found out that <a href="#robert">Robert</a> is an excellent guitar player.</p>
 
-    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and setting up hosting with Beanstalk and Media Temple.</p>
+    <p>My role also involved facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, creating templates with PHP, and setting up hosting with Beanstalk and Media Temple.</p>
 
     <h2>Visit the project</h2>
     <ul class="action">
