Update Kiva case study.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ class: home
   <a href="/kiva" class="banner" style="background-image: url(/images/projects/kiva-timeline.png);">
     <div>
       <h3>10 Days of Lending</h3>
-      <p>with the teams at Kiva and <span style="display: inline-block">GOOD Worldwide</span></p>
+      <p>with the teams at PayPal, Kiva and <span style="display: inline-block">GOOD Worldwide</span></p>
     </div>
   </a>
 
