--- a/kiva.html
+++ b/kiva.html
@@ -13,7 +13,7 @@ title: 10 Days of Lending
   <div class="banner" style="background-image: url(/images/projects/kiva-paypal-responsive.jpg); background-position: 25% 50%;">
     <div>
       <h1>10 Days of Lending</h1>
-      <p>with the teams at <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
+      <p>with the teams at <a href="https://www.paypal.com/stories/us/paypal-kiva-celebrating-ten-years-of-making-a-difference">PayPal</a>, <a href="https://www.kiva.org">Kiva</a> and <a href="http://www.goodinc.com">GOOD Worldwide</a></p>
     </div>
   </div>
 
