Update case studies

--- a/good-fest.html
+++ b/good-fest.html
@@ -19,13 +19,15 @@ title: GOOD Fest
 
   <div class="container">
 
-    <p>GOOD Fest is a music festival hosted on the web and at venues in five different cities, celebrating positive things people are doing in the world.</p>
+    <p>GOOD Fest is a music festival hosted on the web and at venues in five different cities, celebrating positive things people are doing in the world, while raising funds <span style="display: inline-block;">for charity.</span></p>
 
     <p>During the project I worked with our designer, Josh, and our engineer, Brian, to create a responsive microsite with live video streams and information about each of the shows. This project was particularly challenging, since we were still completing the website while the festival was in progress, and each new feature needed to be timed with the start time of the next show.</p>
 
-    <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <a href="https://goodfest.good.is/featured-video/goodfest">video archive</a> of the shows.</p>
+    <p>At the end of the festival, we created promotions for <a href="https://www.good.is/articles/goodfest-announcement-concert">GOOD Magazine</a> and a <a href="https://goodfest.good.is/featured-video/goodfest" style="display: inline-block;">video archive</a> of the shows.</p>
 
     <p>My role involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, fine-tuning the code for better performance, and integrating the HTML with server-side templates. (We used Ruby on Rails.)</p>
+
+    <p>You can <a href="http://www.goodinc.com/project/goodfest">read more about the project</a> at GOOD’s website.</p>
 
     <h2>Visit the project</h2>
 
