--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ class: home
       </li>
     </ul>
     <h2>I can also assist with…</h2>
-    <p>accessibility, browser/device compatibility, testing, optimizing front end code for performance, integration with templates, and responsive emails.</p>
+    <p>accessibility, browser/device compatibility, testing, optimizing front end code for performance, integration with templates, and responsive HTML emails.</p>
   </div>
 
   <div class="container">
