--- a/kiva.html
+++ b/kiva.html
@@ -27,6 +27,8 @@ title: 10 Days of Lending
 
     <p>My role also involved creating prototypes, facilitating design discussions, getting sign-off from decision-makers, writing production-quality HTML, CSS and JavaScript for the user interface, testing for accessibility and browser/device compatibility, and fine-tuning the code for better performance.</p>
 
+    <p>You can <a href="http://www.goodinc.com/project/the_big_impact_of_small_loans">read more about the project</a> at GOOD’s website.</p>
+
     <h2>Visit the project</h2>
 
     <ul class="action">
