--- a/grand-park.html
+++ b/grand-park.html
@@ -12,7 +12,7 @@ title: 4th of July at Grand Park
 
   <div class="banner" style="background-image: url(/images/projects/july4-responsive.jpg); background-position: 25% 50%;">
     <div>
-      <h1>4th of July at Grand Park</h1>
+      <h1>4th of July at <span style="display: inline-block">Grand Park</span></h1>
       <p>with the team at <a href="https://www.musiccenter.org">The Music Center</a></p>
     </div>
   </div>
