--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@ class: home
 
   <div class="container">
 
-    <svg width="100" height="76" viewBox="0 0 100 75.985">
-      <use xlink:href="/images/ship.svg#ship"></use>
-    </svg>
+    <span class="ahoy">
+      <svg width="100" height="76" viewBox="0 0 100 75.985">
+        <use xlink:href="/images/ship.svg#ship"></use>
+      </svg>
+    </span>
 
     <!--
     <p>Ahoy there! <span style="display: inline-block">I’m Jim, a user interface developer,</span> <span style="display: inline-block">based in <span style="display: inline-block">Los Angeles.</span></span></p>
